--- a/q/275165.html
+++ b/q/275165.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>115</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
+<tr d-ix="0"><td>116</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
 <tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
 <tr d-ix="2"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
 <tr d-ix="3"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
@@ -42,11 +42,11 @@
 <tr d-ix="13"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="14"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 115 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 116 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int w[99],j=n-1,i=0;i&lt;n;i=i-j&amp;&amp;!strstr(o,w)?!strcat(o,w)+(j=i):i+1)sprintf(w,&quot;%s %s\n&quot;,s[j],s[i]);}
+<pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int*w,j=n-1,i=*o=0;i&lt;n;i=i-j&amp;&amp;!strstr(o,w)?strcat(o,w)==(j=i):i+1)asprintf(&amp;w,&quot;%s %s\n&quot;,s[j],s[i]);}
 </code></pre>
-<p><a href="https://tio.run/##ddDdboMgFAfwe5@CkbQBiqmiN50zy76eovPCOe0wDhuhM1nTV59DqGmwmzGHcP4H@cXCL5pc7IahQoRIKihp8bFqO8SFAv12s8lonQo/pDwNEn4nEp5yv14ub6Tq9Ita2uP7cVPkymxWqE45vuWrEMt9p79SoZ7ChQQL@Soglds604VnODkN4x2fORcIg6PnAf2YMrbbgwq3YRAEGUjB8ZRMAQGqlDoybQBzSAF8g@AyACT/LkOdjmtbITOOwXraE9uw8@eY2kPU3HqOznZo2VPircmcyf5nshlTl@LKylwrm1uZY2XWyoxIR5ayPyiJbMPzXEM0GR4aXpQj4bE1kqePvGu46TznX2Z90cucF7m8aM6LHF5keZEDg3BkOar4rz@jy/tYjKW6ksSuJJ5LYkcSW0l8LSFr0@hKdegECBLvNPwUVZPv5OD3vw" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##jdBfT4MwEADwdz7FSbKlxRKh8CQ2xn@fYu6hIswSLAstkrjsq4ulbFOYUwm5K3dX@ktTPy25XHVdjjxPEUm8Cm/yqkZCaq8lBZN@SATzKhYk4komggm/mM/PlK7NiyrS4muzSLm2a8ZQwQS@FOch5mpdm7/kaN4Sd6Zgph6lS9SiWJogljjZdqYNr1xIhGHjOGAeG9IXXkPV6HWjF2EQBEtgsNkmtte7QGdKhwtbBpe7BNwnF74GQIn3LDTdPlc5suMYLvbf3lAY5ndtMmwiu3N3TbNS6FBxDgeYEj1NoxOaCemRj459dOqjIx8dfPR33zdedJoX7Xk3pUizXndbWeSdufdS2Mo9f7P5waSpPBrLo6k8GsmjQR79Wx6flsc/XawJz32w3vxIG4@18VQbj7TxoI3/1taZbmoJQeJsu480L/lKdX77CQ" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
