--- a/q/275165.html
+++ b/q/275165.html
@@ -47,6 +47,25 @@
 <pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int*w,j=n-1,i=*o=0;i&lt;n;i=i-j&amp;&amp;!strstr(o,w)?strcat(o,w)==(j=i):i+1)asprintf(&amp;w,&quot;%s %s\n&quot;,s[j],s[i]);}
 </code></pre>
 <p><a href="https://tio.run/##ldBtT4MwEADg7/sVJ8mWFkvk7ZPYGN9@xeRDrTBLsF1oJ4nL/rpYymZSNDEj5O64O@BJecRbJjfDUKMw1ESSUOF9rTokpAl70lAZJUTQUNG4EDeyEFREzWp1oU1nb6RIj29twZlxNaWooQJfi8sEM73t7FdqtOpJsNSw1M8yIHrdlDaIEheHwY7hnQmJMOwXYC8X@BvrQO3MdmfWSRzHZbFw/ZEEptImWZdAYQ8BCwgELwEcitMCaPFZJXY6ZlUjt47h6vQcTo1p/zgm00vk@M/j0FYa/XR8QDoD2MB/KVJfkc4VqadIJ0V6hiI7Ke5awasRca@c5cEeYCtc55F9uPxk0xyY@cBsDsw8YDYBszOA@V/HZMPrGByr/oXKfVQ@R@UeKp9Q@f@orjK7TkJcLA7DF69bttFD1H8D" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p>Ungolfed:</p>
+<pre class="lang-c prettyprint-override"><code>void func(char **s, int n, char *o) {
+    int i = 0, j = n - 1;
+    char *pair = NULL;
+    *o = 0;
+
+    for (; i &lt; n; i++) {
+        asprintf(&amp;pair, &quot;%s %s\n&quot;, s[j], s[i]);
+        if (i == j || !strstr(o, pair)) {
+            strcat(o, pair);
+            j = i;
+            i = 0;
+        } else {
+            i++;
+        }
+        
+    }
+}
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
