--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240831T223630Z
+"   /golfscore                                      20240901T000000Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/147777.html">How long should my microwave run?               : 0147777</a>
 <a href="q/275254.html">Convert to Chomsky normal form                  : 0275254</a>
 <a href="q/275270.html">Snake a string through a simplex                : 0275270</a>
 <a href="q/229495.html">Combinatorial Pipes                             : 0229495</a>
