--- a/q/205.html
+++ b/q/205.html
@@ -26,23 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>293</td><td>Python 2</td><td>110202T203900Z</td><td><a href="https://codegolf.stackexchange.com/questions/205/slot-machine-hacker/386#386">gnibbler</a></td></tr>
-<tr d-ix="1"><td>316</td><td>Python</td><td>110129T215557Z</td><td><a href="https://codegolf.stackexchange.com/questions/205/slot-machine-hacker/208#208">Keith Ra</a></td></tr>
+<tr d-ix="0"><td>315</td><td>Python 2</td><td>110129T215557Z</td><td><a href="https://codegolf.stackexchange.com/questions/205/slot-machine-hacker/208#208">Keith Ra</a></td></tr>
+<tr d-ix="1"><td>293</td><td>Python 2</td><td>110202T203900Z</td><td><a href="https://codegolf.stackexchange.com/questions/205/slot-machine-hacker/386#386">gnibbler</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 293 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 315 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>import sys
-n=1e7+1
-for s in[map(int,x.split())for x in sys.stdin][1:]:
- Q=[]
- for i in range(s[1],n,1e3):A=[i];R=[A.append((A[-1]*5402147+54321)%n)or A[-1]%1e3for x in[0]*8+s];Q+=[R[-10:]]*(R[:-10]==s[2:])
- print Q and[&quot;%d &quot;*10%tuple(Q[0]),&quot;Not enough observations&quot;][len(Q)&gt;1]or&quot;Wrong Machine&quot;
-</code></pre>
-<p><a href="https://tio.run/##Nc7BasMwDAbge57CBAJ2kpU4belI8aAPsEF62UHokC5eY0hlY7ujffrMGewm@PT/knvGyVK7LObmrI8sPENGSupDJbNv61lghuA2OG4o1o9NcLOJXIiVHonW/U2IoyEE2WGXsV4BZmx1s7of6Kp5AIk11VJvRXdSYPB4VnDaDM5pGjk/wYvEcr9rWrk7VPvdtpWiIJE6/qRIuf@D0GD5WgU89pWCc9KmQyz5Gbo0olIB2g5FxpxPD7OeDTRCXowsL2VTxLubNe9Th6jzDxuZJnu/TsxegvY/QzSWQo4wa@K9eJNoff7pLV3Z@/A1GdL5svwC" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1>Python, 316 characters</h1>
- 
-<pre class="lang-py prettyprint-override"><code>C=10**7+1
+<pre class="lang-python prettyprint-override"><code>C=10**7+1
 G=lambda:(s*5402147+54321)%C
 import sys
 I=map(int,sys.stdin.read().split())[1:]
@@ -55,6 +44,18 @@ while I:
   for i in range(10):V+=&quot;%d &quot;%(s%1000);s=G()
  print V;I=I[n:]
 </code></pre>
+<p><a href="https://tio.run/##JY@xasMwFEV3fcXDYJDi1khpQkBGk4fgpYshHYIHpVZigf1kJLVNvt6Vk/EeLu@eNz/i4HC7LLUSfLM5FIIc1ainS68lDZv9jm/F7lDsdx9bwfKa2Gl2PkJ4BNKoSc/UYnxLqQyxt1h6o3vKyjCPNlLGzkJ25G@wo4FGEkDVnHlXiKpVXuPN0JoRuDoPd7AITWpjJ1t1PlK20rDSFuwVQi4450rdO7LG0SBt2buQJ5V9uggG3c9tAHcJxv/qaB2GLNVaMGMw2Zd3eINJfw8WTUaeMMlAUG2yqdKNBJ8adh18mQnO5KlQWd5DltPXPquCSmoEZp@@hlPVpH9QdsvyDw" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 293 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>import sys
+n=1e7+1
+for s in[map(int,x.split())for x in sys.stdin][1:]:
+ Q=[]
+ for i in range(s[1],n,1e3):A=[i];R=[A.append((A[-1]*5402147+54321)%n)or A[-1]%1e3for x in[0]*8+s];Q+=[R[-10:]]*(R[:-10]==s[2:])
+ print Q and[&quot;%d &quot;*10%tuple(Q[0]),&quot;Not enough observations&quot;][len(Q)&gt;1]or&quot;Wrong Machine&quot;
+</code></pre>
+<p><a href="https://tio.run/##Nc7BasMwDAbge57CBAJ2kpU4belI8aAPsEF62UHokC5eY0hlY7ujffrMGewm@PT/knvGyVK7LObmrI8sPENGSupDJbNv61lghuA2OG4o1o9NcLOJXIiVHonW/U2IoyEE2WGXsV4BZmx1s7of6Kp5AIk11VJvRXdSYPB4VnDaDM5pGjk/wYvEcr9rWrk7VPvdtpWiIJE6/qRIuf@D0GD5WgU89pWCc9KmQyz5Gbo0olIB2g5FxpxPD7OeDTRCXowsL2VTxLubNe9Th6jzDxuZJnu/TsxegvY/QzSWQo4wa@K9eJNoff7pLV3Z@/A1GdL5svwC" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
