--- a/q/183315.html
+++ b/q/183315.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>070</td><td>ExcelVBA</td><td>190417T141457Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183393#183393">i_saw_dr</a></td></tr>
-<tr d-ix="1"><td>194</td><td>Chipmunk Basic</td><td>240901T051314Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275287#275287">roblogic</a></td></tr>
-<tr d-ix="2"><td>012</td><td>UiuaSBCS</td><td>240829T083517Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275232#275232">Europe20</a></td></tr>
+<tr d-ix="0"><td>012</td><td>UiuaSBCS</td><td>240829T083517Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275232#275232">Europe20</a></td></tr>
+<tr d-ix="1"><td>070</td><td>ExcelVBA</td><td>190417T141457Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183393#183393">i_saw_dr</a></td></tr>
+<tr d-ix="2"><td>194</td><td>Chipmunk Basic</td><td>240901T051314Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275287#275287">roblogic</a></td></tr>
 <tr d-ix="3"><td>350</td><td>gnuplot 6.0.1</td><td>240829T052914Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275229#275229">roblogic</a></td></tr>
 <tr d-ix="4"><td>153</td><td>JavaScript + HTML Canvas</td><td>221117T110358Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/254648#254648">CreaZyp1</a></td></tr>
 <tr d-ix="5"><td>043</td><td>x8616 machine code</td><td>190416T182143Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183326#183326">640KB</a></td></tr>
@@ -88,7 +88,24 @@
 <tr d-ix="59"><td>041</td><td>Wolfram Language Mathematica</td><td>190416T163737Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183320#183320">alephalp</a></td></tr>
 <tr d-ix="60"><td>072</td><td>Wolfram Language Mathematica</td><td>190416T162857Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183318#183318">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Excel-VBA, <s>89</s> <s>73</s> <s>72</s> 70 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, 12 bytes</h1>
+<pre><code>&amp;ims⊞↥.⊞=.⇡3
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__4omh4pa9MzMuM-KWvTMzLjPiip7ihqUu4oqePS7ih6EzCg==" rel="nofollow noreferrer">Try it here!</a></p>
+<p>Actual 3x3 result:</p>
+<p><a href="https://i.sstatic.net/Dd2esQ74.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Dd2esQ74.png" alt="Output" /></a></p>
+<p>Scaled 100x100 result:</p>
+<p><a href="https://i.sstatic.net/iVMCpDvj.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/iVMCpDvj.png" alt="Scaled" /></a></p>
+<h2>Explanation</h2>
+<pre><code>Code         | Desc                      | Stack
+&amp;ims⊞↥.⊞=.⇡3 |                           |
+           3 | 3                         | 3
+       ⊞=.⇡  | identity matrix           | [1_0_0 0_1_0 0_0_1]
+    ⊞↥.      | outer product with itself | [[1_0_0 1_1_0 1_0_1] [1_1_0 0_1_0 0_1_1] [1_0_1 0_1_1 0_0_1]]
+&amp;ims         | show the image            |
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Excel-VBA, <s>89</s> <s>73</s> <s>72</s> 70 bytes</h1>
 
 <p>Edit: You can use the immediate window and dispense with the <code>Sub</code>/<code>End Sub</code> to save 16 bytes:</p>
 <pre class="lang-vb prettyprint-override"><code>For i=1To 9:[A:C].Cells(i).Interior.ColorIndex=Mid(367648785,i,1):Next
@@ -105,7 +122,7 @@ End Sub
 <p><a href="https://i.sstatic.net/wsWFQ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/wsWFQ.png" alt="Result Grid" /></a></p>
 <p><strong>-2 bytes</strong>: Removal of cell row numbers - thanks to <a href="https://codegolf.stackexchange.com/users/61846">Taylor Raine</a>!</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 194 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 194 bytes</h1>
 <pre class="lang-pascal prettyprint-override"><code>data 3,0,0,3,3,0,3,0,3,3,3,0,0,3,0,0,3,3,3,0,3,0,3,3,0,0,3
 k=33:graphics 0
 for i=1 to 99 step k
@@ -116,23 +133,6 @@ graphics fillrect i,j,i+k,j+k
 next:next
 </code></pre>
 <img src="https://i.sstatic.net/HlVwmbNO.png" width="300"/>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, 12 bytes</h1>
-<pre><code>&amp;ims⊞+.⊞=.⇡3
-</code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__4omh4pa9MzMuM-KWvTMzLjPiip4rLuKKnj0u4oehMwo=" rel="nofollow noreferrer">Try it here!</a></p>
-<p>Actual 3x3 result:</p>
-<p><a href="https://i.sstatic.net/Dd2esQ74.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Dd2esQ74.png" alt="Output" /></a></p>
-<p>Scaled 100x100 result:</p>
-<p><a href="https://i.sstatic.net/iVMCpDvj.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/iVMCpDvj.png" alt="Scaled" /></a></p>
-<h2>Explanation</h2>
-<pre><code>Code         | Desc                      | Stack
-&amp;ims⊞+.⊞=.⇡3 |                           |
-           3 | 3                         | 3
-       ⊞=.⇡  | identity matrix           | [1_0_0 0_1_0 0_0_1]
-    ⊞+.      | outer product with itself | [[2_0_0 1_1_0 1_0_1] [1_1_0 0_2_0 0_1_1] [1_0_1 0_1_1 0_0_2]]
-&amp;ims         | show the image            |
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="http://gnuplot.info/" rel="nofollow noreferrer">gnuplot</a> 6.0.1, 350 bytes</h1>
 <pre class="lang-gnuplot prettyprint-override"><code>se label 1 at 0,.1 '#' tc rgb &quot;magenta&quot;
